@@ -13,3 +13,4 @@ You should have received a copy of the GNU General Public License along
 with Vit.  If not, see <http://www.gnu.org/licenses/>.
 
 Copyright 2012 - 2013, Steve Rader
+Copyright 2013, Scott Kostyshak
