@@ -1,3 +1,4 @@
+ Sat Jul  6 2013 - added Copyright 2013, Scott Kostyshak
  Sat Jul  6 2013 - added an AUTHORS file listing contributors
  Sat Jul  6 2013 - 'gg' now moves to first line (#1229)
  Mon Jun 24 2013 - added ':!' to execute arbitrary string in taskwarrior
